# app/Http/Controllers/TodoController.php
@@ -1,234 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use App\Models\Todo;
-use Illuminate\Database\Eloquent\ModelNotFoundException;
-use Illuminate\Http\Request;
-
-class TodoController extends Controller
-{
-    protected $todo;
-
-    public function __construct(Todo $todo){
-        $this->todo = $todo;
-    }
-
-    /**
-     * Create Todo
-     * @OA\Post (
-     *     path="/api/todo/store",
-     *     tags={"ToDo"},
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                      type="object",
-     *                      @OA\Property(
-     *                          property="title",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="content",
-     *                          type="string"
-     *                      )
-     *                 ),
-     *                 example={
-     *                     "title":"example title",
-     *                     "content":"example content"
-     *                }
-     *             )
-     *         )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="success",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="title", type="string", example="title"),
-     *              @OA\Property(property="content", type="string", example="content"),
-     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
-     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z"),
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="invalid",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="msg", type="string", example="fail"),
-     *          )
-     *      )
-     * )
-     */
-    public function store(Request $request){
-        $todo = $this->todo->createTodo($request->all());
-        return response()->json($todo);
-    }
-
-    /**
-     * Update Todo
-     * @OA\Put (
-     *     path="/api/todo/update/{id}",
-     *     tags={"ToDo"},
-     *     @OA\Parameter(
-     *         in="path",
-     *         name="id",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                      type="object",
-     *                      @OA\Property(
-     *                          property="title",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="content",
-     *                          type="string"
-     *                      )
-     *                 ),
-     *                 example={
-     *                     "title":"example title",
-     *                     "content":"example content"
-     *                }
-     *             )
-     *         )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="success",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="title", type="string", example="title"),
-     *              @OA\Property(property="content", type="string", example="content"),
-     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
-     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z")
-     *          )
-     *      )
-     * )
-     */
-    public function update($id, Request $request){
-        try {
-            $todo = $this->todo->updateTodo($id,$request->all());
-            return response()->json($todo);
-        }catch (ModelNotFoundException $exception){
-            return response()->json(["msg"=>$exception->getMessage()],404);
-        }
-    }
-
-    /**
-     * Get Detail Todo
-     * @OA\Get (
-     *     path="/api/todo/get/{id}",
-     *     tags={"ToDo"},
-     *     @OA\Parameter(
-     *         in="path",
-     *         name="id",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="success",
-     *         @OA\JsonContent(
-     *              @OA\Property(property="id", type="number", example=1),
-     *              @OA\Property(property="title", type="string", example="title"),
-     *              @OA\Property(property="content", type="string", example="content"),
-     *              @OA\Property(property="updated_at", type="string", example="2021-12-11T09:25:53.000000Z"),
-     *              @OA\Property(property="created_at", type="string", example="2021-12-11T09:25:53.000000Z")
-     *         )
-     *     )
-     * )
-     */
-    public function get($id){
-        $todo = $this->todo->getTodo($id);
-        if($todo){
-            return response()->json($todo);
-        }
-        return response()->json(["msg"=>"Todo item not found"],404);
-    }
-
-    /**
-     * Get List Todo
-     * @OA\Get (
-     *     path="/api/todo/gets",
-     *     tags={"ToDo"},
-     *     @OA\Response(
-     *         response=200,
-     *         description="success",
-     *         @OA\JsonContent(
-     *             @OA\Property(
-     *                 type="array",
-     *                 property="rows",
-     *                 @OA\Items(
-     *                     type="object",
-     *                     @OA\Property(
-     *                         property="_id",
-     *                         type="number",
-     *                         example="1"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="title",
-     *                         type="string",
-     *                         example="example title"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="content",
-     *                         type="string",
-     *                         example="example content"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="updated_at",
-     *                         type="string",
-     *                         example="2021-12-11T09:25:53.000000Z"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="created_at",
-     *                         type="string",
-     *                         example="2021-12-11T09:25:53.000000Z"
-     *                     )
-     *                 )
-     *             )
-     *         )
-     *     )
-     * )
-     */
-    public function gets(){
-        $todos = $this->todo->getsTodo();
-        return response()->json(["rows"=>$todos]);
-    }
-
-    /**
-     * Delete Todo
-     * @OA\Delete (
-     *     path="/api/todo/delete/{id}",
-     *     tags={"ToDo"},
-     *     @OA\Parameter(
-     *         in="path",
-     *         name="id",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="success",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="msg", type="string", example="delete todo success")
-     *         )
-     *     )
-     * )
-     */
-    public function delete($id){
-        try {
-            $todo = $this->todo->deleteTodo($id);
-            return response()->json(["msg"=>"delete todo success"]);
-        }catch (ModelNotFoundException $exception){
-            return response()->json(["msg"=>$exception->getMessage()],404);
-        }
-    }
-}
